train microservice update

--- a/BackEnd/train-service/src/main/resources/application.properties
+++ b/BackEnd/train-service/src/main/resources/application.properties
@@ -2,8 +2,8 @@ server.port=8086
 spring.application.name=train-service
 
 
-spring.data.mongodb.uri=mongodb+srv://Tamoghna:tamoghna1998@clusterrailwayreservati.glkzysl.mongodb.net/OnlineRailway?retryWrites=true&w=majority
-spring.data.mongodb.database=OnlineRailway
+spring.data.mongodb.uri=mongodb+srv://Tamoghna:tamoghna1998@clusterrailwayreservati.glkzysl.mongodb.net/Train-microservice?retryWrites=true&w=majority
+spring.data.mongodb.database=Train-microservice
 
 
 spring.mvc.pathmatch.matching-strategy= ANT_PATH_MATCHER
