--- a/BackEnd/Booking/src/main/resources/application.properties
+++ b/BackEnd/Booking/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8012
 spring.application.name = booking-service
 
-spring.data.mongodb.uri=mongodb+srv://Tamoghna:tamoghna1998@clusterrailwayreservati.glkzysl.mongodb.net/OnlineRailway?retryWrites=true&w=majority
-spring.data.mongodb.database=OnlineRailway
+spring.data.mongodb.uri=mongodb+srv://Tamoghna:tamoghna1998@clusterrailwayreservati.glkzysl.mongodb.net/Booking-microservice?retryWrites=true&w=majority
+spring.data.mongodb.database=Booking-microservice
 
 
 spring.mvc.pathmatch.matching-strategy= ANT_PATH_MATCHER
