--- a/BackEnd/admin-service/src/main/resources/application.properties
+++ b/BackEnd/admin-service/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port= 9098
 spring.application.name=admin-service
 
-spring.data.mongodb.uri=mongodb+srv://Tamoghna:tamoghna1998@clusterrailwayreservati.glkzysl.mongodb.net/OnlineRailway?retryWrites=true&w=majority
-spring.data.mongodb.database=OnlineRailway
+spring.data.mongodb.uri=mongodb+srv://Tamoghna:tamoghna1998@clusterrailwayreservati.glkzysl.mongodb.net/Admin-microservice?retryWrites=true&w=majority
+spring.data.mongodb.database=Admin-microservice
 
 bezkoder.app.jwtSecret= SecretKey
 bezkoder.app.jwtExpirationMs= 86400000
