--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -13,11 +13,13 @@
     "bootstrap": "^5.2.1",
     "cors": "^2.8.5",
     "formik": "^2.2.9",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^9.0.8",
     "react-validation": "^3.0.7",
     "react-validator": "^0.1.0",
     "redux": "^4.2.0",
